fixed spacing on login page

--- a/public/css/scss/layouts/_main.scss
+++ b/public/css/scss/layouts/_main.scss
@@ -6,6 +6,6 @@
 .mainbg{
 	width: 100%;
     height: 100%;
-    background: url(../img/home-bg.jpg) repeat-x left top;
+    background: url(../img/home-bg.jpg) repeat-x left center;
     background-size: cover; 
 }
