--- a/public/css/scss/modules/_btn.scss
+++ b/public/css/scss/modules/_btn.scss
@@ -18,5 +18,5 @@
 .btn-login {
     background: url(../img/facebook-icon.png) no-repeat 8% 10px;
     padding-left: 30px;
-    margin-top: 40%;
+    margin-top: 40px;
 }
