--- a/public/css/scss/modules/_logo.scss
+++ b/public/css/scss/modules/_logo.scss
@@ -2,6 +2,6 @@
 	display: block;
 	width: 57px;
 	height: 83px;
-	padding-top: 40%;
+	padding-top: 40px;
 	margin: 0 auto 20px;
 }
