--- a/public/css/style.css
+++ b/public/css/style.css
@@ -52,7 +52,7 @@ a {
 .mainbg {
   width: 100%;
   height: 100%;
-  background: url(../img/home-bg.jpg) repeat-x left top;
+  background: url(../img/home-bg.jpg) repeat-x left center;
   background-size: cover;
 }
 
@@ -132,7 +132,7 @@ a {
   display: block;
   width: 57px;
   height: 83px;
-  padding-top: 40%;
+  padding-top: 40px;
   margin: 0 auto 20px;
 }
 
@@ -157,5 +157,5 @@ a {
 .btn-login {
   background: url(../img/facebook-icon.png) no-repeat 8% 10px;
   padding-left: 30px;
-  margin-top: 40%;
+  margin-top: 40px;
 }
